2021-03-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--exclude): Update for Emacs 28
	compatability: deprecating when-let*.

2021-03-11  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-exclude-file-extensions)
	(diredc-browse-exclude-coding-systems)
	(diredc-browse-exclude-helper): New defcustoms.
	(diredc--guess-decoding, diredc-browse--exclude)
	(diredc-browse--hook-function): Use them.
	(diredc-browse-mode): Describe new feature in docstring.

2021-03-11  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-shell-list): Correct defcustom.

2021-03-11  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-shell--bufwin): Redefine and make unused variable useful.
	(diredc-shell-kill, diredc-shell): Use it, to return control to
	parent window unpoin buffer being killed.

2021-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--advice--wdired-exit): Preserve
	bonus-configuration options on all exits from wdired mode
	(diredc--hook-function): Properly handle all exits from wdired mode.

2021-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-mode): Ensure all data is cleaned upon
	exiting mode, handle opening not being on file line.
	(diredc-browse--hook-function): Handle gpg files and file insert
	errors.
	(diredc-exit): Ensure clean exit of diredc-browse-mode when
	exiting diredc.

2021-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--hook-function): Re-use the same single dired
	browse buffer for all files, with `use insert-file-contents'
	instead of find-file. Display an explanation for unviewable dired lines.
	(diredc-browse-mode): Properly un-dedicate and re-dedicate window
	on exiting mode.
	(diredc-hist-change-directory, diredc-hist-up-directory)
	(diredc-hist-select, diredc-hist-duplicate)
	(diredc-hist-find-alternate-file): Improve dedication of window to
	diredc.

2020-12-29  Boruch Baum  <boruch_baum@gmx.com>
